[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "serde_tokio_postgres"
homepage = "https://github.com/1aim/serde_postgres"
repository = "https://github.com/1aim/serde_postgres.git"
version = "0.1.3"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0.80"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", branch = "std-futures" }
# postgres-derive = "0.3.3"

[dev-dependencies]
serde_derive = "1.0.80"
