[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "serde_tokio_postgres"
homepage = "https://github.com/1aim/serde_postgres"
repository = "https://github.com/1aim/serde_postgres.git"
version = "0.1.3"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0.80"
tokio-postgres = { version = "0.5.0-alpha.2" }
# postgres-derive = "0.3.3"

[dev-dependencies]
serde_derive = "1.0.80"
